Criação do arquivo CSS para o header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Loja de Fones</title>
+
+  <link rel="stylesheet" href="./header.css">
 </head>
 <body>
   <header>
