--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Loja de Fones</title>
 
+  <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./header.css">
 </head>
 <body>
