--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Loja de Fones</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./header.css">
 </head>
