--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <title>Loja de Fones</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./header.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <header>
@@ -18,5 +19,8 @@
       <a href="https://collabcode.training/">Carrinho (10)</a>
     </nav>
   </header>
+  <main>
+    <button type="button">Comprar</button>
+  </main>
 </body>
 </html>
