--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="./global.css">
   <link rel="stylesheet" href="./header.css">
   <link rel="stylesheet" href="./main.css">
 </head>
