--- a/comprar.html
+++ b/comprar.html
@@ -9,21 +9,12 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/container-store.css">
   <link rel="stylesheet" href="./css/header-store.css">
-  <link rel="stylesheet" href="./css/button-store.css">
 </head>
 <body>
-
   <div class="container-store">
     <header class="header-store">
-      <h1 class="title">LOGO</h1>
-      <nav class="navigation">
-        <a class="action" href="https://collabcode.training/">Produtos</a>
-        <a class="action" href="https://collabcode.training/">Serviços</a>
-        <a class="action last" href="https://collabcode.training/">Carrinho (10)</a>
-      </nav>
+      <h1 class="title">Comprar</h1>
     </header>
-    <a class="button-store" href="./comprar.html">Comprar</a>
   </div>
-
 </body>
 </html>
