--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/container-store.css">
   <link rel="stylesheet" href="./css/header-store.css">
+  <link rel="stylesheet" href="./css/product-store.css">
   <link rel="stylesheet" href="./css/button-store.css">
 </head>
 <body>
@@ -23,15 +24,15 @@
       </nav>
     </header>
 
-    <dl>
-      <dt>Fone top, feliz e caro</dt>
-      <dd>4.0 (97)</dd>
-      <dd>Frete C$ 108</dd>
-      <dd>Preço C$ 340</dd>
-      <dd>Fone TOP com um cor feliz que não tem fio. A cor também é algo que impressiona junto com o  seu layout modernão! Ele é caro? É! Mas compre que você não vai se arrepender e se você se arrepender pode vender no mercado livre..kkkk</dd>
-      <dd><a href="">Saber mais...</a></dd>
-      <dd><button class="button-store -secondary">Adiciona no carrinho</button></dd>
-      <dd><a class="button-store" href="./comprar.html">Comprar</a></dd>
+    <dl class="product-store">
+      <dt class="product-store -title">Fone top, feliz e caro</dt>
+      <dd class="product-store -rating">4.0 (97)</dd>
+      <dd class="product-store -price">Frete C$ 108</dd>
+      <dd class="product-store -price">Preço C$ 340</dd>
+      <dd class="product-store -description">Fone TOP com um cor feliz que não tem fio. A cor também é algo que impressiona junto com o  seu layout modernão! Ele é caro? É! Mas compre que você não vai se arrepender e se você se arrepender pode vender no mercado livre..kkkk</dd>
+      <dd><a class="product-store -link" href="">Saber mais...</a></dd>
+      <dd class="product-store -button"><button class="button-store -secondary">Adiciona no carrinho</button></dd>
+      <dd><a class="button-store" href="./comprar.html">Comprar</a></dd class="product-store -button">
     </dl>
   </div>
 
