Aula 005 - Desafio Intermediário
Alinhar os botões do produto lateralmente e aplicar margem.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <dd class="product-store -description">Fone TOP com um cor feliz que não tem fio. A cor também é algo que impressiona junto com o  seu layout modernão! Ele é caro? É! Mas compre que você não vai se arrepender e se você se arrepender pode vender no mercado livre..kkkk</dd>
       <dd><a class="product-store -link" href="">Saber mais...</a></dd>
       <dd class="product-store -button"><button class="button-store -secondary">Adiciona no carrinho</button></dd>
-      <dd><a class="button-store" href="./comprar.html">Comprar</a></dd class="product-store -button">
+      <dd class="product-store -button"><a class="button-store" href="./comprar.html">Comprar</a></dd>
     </dl>
   </div>
 
