--- a/comprar.html
+++ b/comprar.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Loja de Fones</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Loja de Fones</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/container-store.css">
-  <link rel="stylesheet" href="./css/header-store.css">
-</head>
-<body>
-  <div class="container-store">
-    <header class="header-store">
-      <h1 class="title">Comprar</h1>
-    </header>
-  </div>
-</body>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/container-store.css" />
+    <link rel="stylesheet" href="./css/header-store.css" />
+  </head>
+  <body>
+    <div class="container-store">
+      <header class="header-store">
+        <h1 class="title">Comprar</h1>
+      </header>
+    </div>
+  </body>
 </html>
