--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Loja de Fones</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Loja de Fones</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/container-store.css">
-  <link rel="stylesheet" href="./css/header-store.css">
-  <link rel="stylesheet" href="./css/product-store.css">
-  <link rel="stylesheet" href="./css/button-store.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/container-store.css" />
+    <link rel="stylesheet" href="./css/header-store.css" />
+    <link rel="stylesheet" href="./css/product-store.css" />
+    <link rel="stylesheet" href="./css/button-store.css" />
+  </head>
+  <body>
+    <div class="container-store">
+      <header class="header-store">
+        <h1 class="title">LOGO</h1>
+        <nav class="navigation">
+          <a class="action" href="https://collabcode.training/">Produtos</a>
+          <a class="action" href="https://collabcode.training/">Serviços</a>
+          <a class="action last" href="https://collabcode.training/"
+            >Carrinho (10)</a
+          >
+        </nav>
+      </header>
 
-  <div class="container-store">
-    <header class="header-store">
-      <h1 class="title">LOGO</h1>
-      <nav class="navigation">
-        <a class="action" href="https://collabcode.training/">Produtos</a>
-        <a class="action" href="https://collabcode.training/">Serviços</a>
-        <a class="action last" href="https://collabcode.training/">Carrinho (10)</a>
-      </nav>
-    </header>
-
-    <dl class="product-store">
-      <dt class="product-store -title">Fone top, feliz e caro</dt>
-      <dd class="product-store -rating">4.0 (97)</dd>
-      <dd class="product-store -price">Frete C$ 108</dd>
-      <dd class="product-store -price">Preço C$ 340</dd>
-      <dd class="product-store -description">Fone TOP com um cor feliz que não tem fio. A cor também é algo que impressiona junto com o  seu layout modernão! Ele é caro? É! Mas compre que você não vai se arrepender e se você se arrepender pode vender no mercado livre..kkkk</dd>
-      <dd><a class="product-store -link" href="">Saber mais...</a></dd>
-      <dd class="product-store -button"><button class="button-store -secondary">Adiciona no carrinho</button></dd>
-      <dd class="product-store -button"><a class="button-store" href="./comprar.html">Comprar</a></dd>
-    </dl>
-  </div>
-
-</body>
+      <dl class="product-store">
+        <dt class="product-store -title">Fone top, feliz e caro</dt>
+        <dd class="product-store -rating">4.0 (97)</dd>
+        <dd class="product-store -price">Frete C$ 108</dd>
+        <dd class="product-store -price">Preço C$ 340</dd>
+        <dd class="product-store -description">
+          Fone TOP com um cor feliz que não tem fio. A cor também é algo que
+          impressiona junto com o seu layout modernão! Ele é caro? É! Mas compre
+          que você não vai se arrepender e se você se arrepender pode vender no
+          mercado livre..kkkk
+        </dd>
+        <dd><a class="product-store -link" href="">Saber mais...</a></dd>
+        <dd class="product-store -button">
+          <button class="button-store -secondary">Adiciona no carrinho</button>
+        </dd>
+        <dd class="product-store -button">
+          <a class="button-store" href="./comprar.html">Comprar</a>
+        </dd>
+      </dl>
+    </div>
+  </body>
 </html>
