Aula 005 - Desafio avançado
Colocar a imagem do produto alinhada à esquerda.
Os dados do produto devem ficar alinhados à direira da imagem.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
       <dl class="product-store">
         <dt class="product-store -title">Fone top, feliz e caro</dt>
+        <dt class="product-store -image-container">
+          <img src="./img/fone.png" alt="Fone top, feliz e caro" />
+        </dt>
         <dd class="product-store -rating">4.0 (97)</dd>
         <dd class="product-store -price">Frete C$ 108</dd>
         <dd class="product-store -price">Preço C$ 340</dd>
@@ -41,7 +44,9 @@
         </dd>
         <dd><a class="product-store -link" href="">Saber mais...</a></dd>
         <dd class="product-store -button">
-          <button class="button-store -secondary">Adiciona no carrinho</button>
+          <button class="button-store -secondary">
+            Adiciona no carrinho
+          </button>
         </dd>
         <dd class="product-store -button">
           <a class="button-store" href="./comprar.html">Comprar</a>
